# msl-secp256k1

./: .gitignore  Cargo.toml  README.md  build_shaders.sh
metal/: bigint_add.ir  bigint_add.metal  bigint_add.metallib  u32_add.ir
metal/tests/: bigint.metal  bigint_add_unsafe.metal  bigint_add_unsafe.metal.ir  bigint_add_unsafe.metal.lib  bigint_add_unsafe.metallib  bigint_add_wide.metal  bigint_add_wide.metal.ir  bigint_add_wide.metal.lib  bigint_add_wide.metallib  bigint_sub.metal  bigint_sub.metal.ir  bigint_sub.metal.lib  bigint_sub.metallib  constants.metal  ff.metal  ff_add.metal  ff_add.metal.ir  ff_add.metal.lib  ff_add.metallib  ff_sub.metal  ff_sub.metal.ir  ff_sub.metal.lib  ff_sub.metallib  jacobian.metal  jacobian_add_2007_bl_unsafe.metal  jacobian_add_2007_bl_unsafe.metal.ir  jacobian_add_2007_bl_unsafe.metal.lib  jacobian_dbl_2009_l.metal  jacobian_dbl_2009_l.metal.ir  jacobian_dbl_2009_l.metal.lib  mont.metal  mont_mul_modified.metal  mont_mul_modified.metal.ir  mont_mul_modified.metal.lib  mont_mul_modified_benchmarks.metal.ir  mont_mul_modified_benchmarks.metal.lib  mont_mul_optimised.metal  mont_mul_optimised.metal.ir  mont_mul_optimised.metal.lib  mont_mul_optimised.metallib  (+7 more)
py/: __init__.py  utils.py
rs/: Cargo.toml
rs/src/: bigint.rs  bigint_add.rs  lib.rs  u32_add.rs
rs/src/tests/: bigint_add_unsafe.rs  ff_add.rs  (+6 more)
src/: curve.rs  gpu.rs  lib.rs  shader.rs
src/tests/: bigint_add_unsafe.rs  bigint_add_wide.rs  bigint_sub.rs  ff_add.rs  ff_sub.rs  mod.rs  mont_benchmarks.rs  mont_mul_modified.rs  mont_mul_optimised.rs  multiple_shaders.rs
