[package]
name = "rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metal = "0.27.0"
num = "0.4.1"
#ramhorns = "1.0.0"

[dependencies.objc]
version = "0.2.4"

[dev-dependencies]
multiprecision = { git = "ssh://git@github.com/geometryresearch/multiprecision.git" }
num-bigint = "0.4.4"
